@@ -1,4 +1,4 @@
-$NetBSD$
+$NetBSD: distinfo,v 1.1.1.1 2004/04/20 22:58:57 xtraeme Exp $
 
-SHA1 (acidrip-0.12.tar.gz) = c8bc596df1a71c72a4f430afca619fddd6e0e2d4
-Size (acidrip-0.12.tar.gz) = 90113 bytes
+SHA1 (acidrip-0.14.tar.gz) = 5873c835c0d52edc2c1a799e9751980b6c7cc4f1
+Size (acidrip-0.14.tar.gz) = 92086 bytes
